public class Cell {
    private int x;
    private int y;
    private boolean isWall;
    private boolean hasDot;
    
    public int getX() {
        return x;
    }
    
    public int getY() {
        return y;
    }
    
    public boolean isWall() {
        return isWall;
    }
    
    public boolean hasDot() {
        return hasDot;
    }
}
